@startuml
' viewModel
class MVVM.viewModel.BooksViewModel {
- List<Book> books
+ String getDisplayableBooks()
+ void markBookAsRead(int)
}






' model
' в укомпоненте model как обычно хранятся данные и бизнес логика приложения
' изменение состояния данных в компоненте model,
' приводит к автоматическому изменению состяния представления,
' хотя напрямую model и view не связаны
class MVVM.model.Book {
- String title
- boolean isRead
+ void markAsRead()
+ boolean isRead()
+ String toString()
}



' view
' пользователь взаимодействует с приложением чрез компонент view
class MVVM.view.MVVMPatternDemo {
+ {static} void main(String[])
}

MVVM.model.Book <|-- MVVM.viewModel.BooksViewModel
MVVM.model.Book --|> MVVM.viewModel.BooksViewModel
MVVM.viewModel.BooksViewModel --|> MVVM.view.MVVMPatternDemo
MVVM.model.Book ..|> MVVM.viewModel.BooksViewModel

MVVM.view.MVVMPatternDemo ..|> MVVM.viewModel.BooksViewModel
MVVM.viewModel.BooksViewModel ..|> MVVM.view.MVVMPatternDemo
@enduml